--- a/ChangeLog
+++ b/ChangeLog
@@ -36,3 +36,7 @@
 
 2014-03-31
 	*	Projects continue to be on the twill dev branch
+
+2014-04-04
+	*	Probably there will be more twill things
+	* 	See also the cse491-serverz-node.js repository for imageapp in node.js
